[tool.poetry]
name = "ak42playground"
version = "0.1.0"
description = ""
authors = ["Zifeng Yu <alan@yanhuangdata.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
drain3 = "^0.9.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
parse_log = "ak42playground:parse_log"
